Incluindo um botão na tela principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="LabelIdade">Idade</string>
     <string name="LabelAltura">Altura</string>
     <string name="LabelPeso">Peso</string>
+    <string name="MainBtn">Calcular</string>
 </resources>
